[package]
name = "howlongtobeat"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
scraper = "0.13.0"
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }