[package]
name = "howlongtobeat"
version = "0.4.0"
edition = "2021"
description = "Simple api for https://howlongtobeat.com"
homepage = "https://github.com/saturnavt/howlongtobeat-api"
repository = "https://github.com/saturnavt/howlongtobeat-api"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]
keywords = [
    "howlongtobeat"
]
licence = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
scraper = "0.13.0"
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3